# genshin-wish-viewer-cpp

./: CMakeLists.txt  README.md
.github/workflows/: cmake-gtest.yml
database/: CMakeLists.txt
database/databaseTest/: CMakeLists.txt  databaseTest.cpp  utilityTest.cpp  utilityTest.h
database/src/: db.cpp  db.h
importer/: CMakeLists.txt  README.txt
importer/src/: importer.cpp  importer.h
logger/: CMakeLists.txt
logger/loggerTest/: CMakeLists.txt
logger/src/: logger.cpp  logger.h
